# service-user-proto

./: .gitignore  Makefile  README.md  go.mod  pyproject.toml
.github/workflows/: ci.yml  release.yml  security.yml
docs/plans/: 2025-03-28-python-proto-generation-design.md
proto/: auth.proto  common.proto  device.proto  user.proto  user_file.proto
proto/user/: auth.proto  common.proto  device.proto  user.proto  user_file.proto
scripts/: fix_python_imports.py
