[tool.poetry]
name = "service-user-proto-dev"
version = "0.1.0"
description = "Development dependencies for service-user-proto"
authors = ["Aditya Kumar <adityakw90@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
grpcio = "^1.60.0"
grpcio-tools = "^1.60.0"
protobuf = "^4.25.0"
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
