[tool.poetry]
name = "service-user-proto"
version = "0.1.4"
description = "Protocol Buffer definitions and gRPC contracts for User Service"
authors = [
	"Aditya <aditya.kw90@gmail.com>",
	"Aditya <aditya@mtamedia.co.id>"
]
readme = "README.md"
packages = [
    { include = "service_user_proto", from = "gen/python" }
]

[tool.poetry.dependencies]
python = "^3.12"
protobuf = "^6.33.6"
grpcio = "^1.78.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.0"
grpcio-tools = "^1.78.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
